infrastructure/kubernetes/manifests/renderred/environments-staging/kubearmor/MutatingWebhookConfiguration/kubearmor-controller-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/managed-by: Helmraiser
    app.tanka.grafana.com: kubearmor
  name: kubearmor-controller-mutating-webhook-configuration
  namespace: kubearmor
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lRUW5rZWtOMEFPelg4VkxTZm9CbVI4akFOQmdrcWhraUc5dzBCQVFzRkFEQWYKTVIwd0d3WURWUVFERXhScmRXSmxZWEp0YjNJdFkyOXVkSEp2Ykd4bGNqQWVGdzB5TmpBMk1UVXlNakE1TlRkYQpGdzB5T1RBMk1UUXlNakE1TlRkYU1COHhIVEFiQmdOVkJBTVRGR3QxWW1WaGNtMXZjaTFqYjI1MGNtOXNiR1Z5Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBKzNDcURQWTJRNE9UOVRTWW1MSUQKWnU5dFRWTXdaZjl5bVFpT1hKN0dPWms2dnZCWGV1TjJLZ0lnelJVdVF2OGdtUmRNdWNJbGVwQU13TXZYbzBDTwpRcmw1eXdjNHFr [...]
      service:
        name: kubearmor-controller-webhook-service
        namespace: kubearmor
        path: /mutate-pods
    failurePolicy: Ignore
    name: annotation.kubearmor.com
    objectSelector:
      matchExpressions:
        - key: kubearmor-app
          operator: DoesNotExist
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
          - pods/binding
        scope: "*"
    sideEffects: NoneOnDryRun
